--- a/Youtube dl bot/config.env
+++ b/Youtube dl bot/config.env
@@ -1,7 +1,7 @@
 
-api_id = "22165008"
-api_hash = "47757beff119eff0403b39638b4461dc"
-admin_id = "6533536538"
-bot_token = "7153062132:AAGkYxzz18xuFrTd9NE4iAxCenQ5k83ELtM"
-bot_name = "Spotify down"
+api_id = "???"
+api_hash = "???"
+admin_id = "???"
+bot_token = "7037429296:AAG4v9Xl8TBLwttrwSusC3njxGvSCoj7z70"
+bot_name = "KodaYouTube | ربات یوتیوب"
 
